# EDTH-CyberTrace

./: .gitignore  .python-version  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Gr_diff.jsx  Input_panel.jsx  Output_panel.jsx  index.css
nlp/: intent_classifier.py
query/: executor.py
