[project]
name = "edth-cybertrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "turingdb>=1.34.0",
]
